clusters/netflix-lab/apps/streaming/playback/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playback-ingress
  namespace: streaming
spec:
  ingressClassName: nginx
  rules:
  - host: playback.netflix.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: playback-service
            port:
              number: 8090
